After applying the Pose Breakdowner, the Factor in the popup menu does not work. #89027

Closed
opened 2021-06-10 11:16:22 +02:00 by Yuriy · 19 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: 2.92

Caused by fafd21b14c

Short description of error
Bug_Pose.gif
As you can see in the gif animation, I shifted the pose by 25%, but the popup menu shows 0.5 in the Factor line, and if I change the Factor, the pose is reset.

Exact steps for others to reproduce the error
Bug.blend

  1. Open Bug.blend
  2. A bone in Pose Mode will be selected. Press Shift+E to start the Pose Breakdowner.
  3. Shift to any value.
  4. You will see an incorrect Factor in the pop-up menu.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: 2.92 Caused by fafd21b14c **Short description of error** ![Bug_Pose.gif](https://archive.blender.org/developer/F10165408/Bug_Pose.gif) As you can see in the gif animation, I shifted the pose by 25%, but the popup menu shows 0.5 in the Factor line, and if I change the Factor, the pose is reset. **Exact steps for others to reproduce the error** [Bug.blend](https://archive.blender.org/developer/F10165410/Bug.blend) 1) Open Bug.blend 2) A bone in Pose Mode will be selected. Press Shift+E to start the Pose Breakdowner. 3) Shift to any value. 4) You will see an incorrect Factor in the pop-up menu.
Author

Added subscriber: @YuraKharitonow

Added subscriber: @YuraKharitonow
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

This comment was removed by @PratikPB2123

*This comment was removed by @PratikPB2123*
Member

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Member

Thank you for report.
I can reproduce this issue in 2.93 but not in 3.0. So this issue has been resolved already.
You can download latest development build from https://builder.blender.org/download/daily/

(My apologies for early call)

Thank you for report. I can reproduce this issue in 2.93 but not in 3.0. So this issue has been resolved already. You can download latest development build from https://builder.blender.org/download/daily/ (My apologies for early call)
Author

Will it fix in 2.93 LTS release?

In #89027#1174534, @PratikPB2123 wrote:
Thank you for report.
I can reproduce this issue in 2.93 but not in 3.0. So this issue has been resolved already.
You can download latest development build from https://builder.blender.org/download/daily/

(My apologies for early call)

Will it fix in 2.93 LTS release? > In #89027#1174534, @PratikPB2123 wrote: > Thank you for report. > I can reproduce this issue in 2.93 but not in 3.0. So this issue has been resolved already. > You can download latest development build from https://builder.blender.org/download/daily/ > > (My apologies for early call)
Member

@YuraKharitonow , check here to see what bugfixes will be included in next LTS release https://developer.blender.org/T88449
And also refer this for more information https://wiki.blender.org/wiki/Process/LTS

@YuraKharitonow , check here to see what bugfixes will be included in next LTS release https://developer.blender.org/T88449 And also refer this for more information https://wiki.blender.org/wiki/Process/LTS
Author

In #89027#1174968, @PratikPB2123 wrote:
@YuraKharitonow , check here to see what bugfixes will be included in next LTS release https://developer.blender.org/T88449
And also refer this for more information https://wiki.blender.org/wiki/Process/LTS

@PratikPB2123 Hello. Blender 2.93.2 was out. But this bug in the LTS version is still not fixed. What needs to be done and who can make it so that this fix is ​​included in the current LTS version? I realized that this bug has been fixed in the next versions of Blender, but it would be nice to get a fix in version 2.93 as well. Maybe you need to reopen this problem and move it to the list of candidates for 2.93.3 (4 or 5)?

> In #89027#1174968, @PratikPB2123 wrote: > @YuraKharitonow , check here to see what bugfixes will be included in next LTS release https://developer.blender.org/T88449 > And also refer this for more information https://wiki.blender.org/wiki/Process/LTS @PratikPB2123 Hello. Blender 2.93.2 was out. But this bug in the LTS version is still not fixed. What needs to be done and who can make it so that this fix is ​​included in the current LTS version? I realized that this bug has been fixed in the next versions of Blender, but it would be nice to get a fix in version 2.93 as well. Maybe you need to reopen this problem and move it to the list of candidates for 2.93.3 (4 or 5)?
Member

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-08-10 17:01:32 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Seems this is back in 3.0 even... will check

Seems this is back in 3.0 even... will check
Philipp Oeser removed their assignment 2021-08-10 17:16:11 +02:00
Member

Added subscribers: @ChrisLend, @dr.sybren

Added subscribers: @ChrisLend, @dr.sybren
Member

Caused by fafd21b14c

CC @ChrisLend
CC @dr.sybren

Caused by fafd21b14c CC @ChrisLend CC @dr.sybren

ah I see. The bug has been partly fixed, where the factor slider now works
but it still starts off at 50% regardless of where it was confirmed

not sure about the state of 2.93 though

ah I see. The bug has been partly fixed, where the factor slider now works but it still starts off at 50% regardless of where it was confirmed not sure about the state of 2.93 though
Christoph Lendenfeld self-assigned this 2021-08-10 23:05:33 +02:00
Member

Regarding 2.93: issue came up in D9054 as well (percentage vs factor), see https://developer.blender.org/D9054#288329

So looks like this first broke with c71a8e8376 and since the psoe-sliding stuff is not in 2.93, we are getting this in 2.93:

RNA_float_set: POSE_OT_breakdown.percentage not found

D12191: Fix #89027: [2.93 only] pose slide factor wrong in redo popup will fix it in 2.93 (will not apply to 3.0, but 2.93 "only")

Regarding 2.93: issue came up in [D9054](https://archive.blender.org/developer/D9054) as well (`percentage` vs `factor`), see https://developer.blender.org/D9054#288329 So looks like this first broke with c71a8e8376 and since the psoe-sliding stuff is not in 2.93, we are getting this in 2.93: ``` RNA_float_set: POSE_OT_breakdown.percentage not found ``` [D12191: Fix #89027: [2.93 only] pose slide factor wrong in redo popup](https://archive.blender.org/developer/D12191) will fix it in 2.93 (will not apply to 3.0, but 2.93 "only")

This issue was referenced by 7c7348f78d

This issue was referenced by 7c7348f78d1b094c4fdc20f2c9dbfe521b68c11e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89027
No description provided.